feat: add import by csv and categorisation of transaction

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,7 @@ DB_PASSWORD=root
 DB_DATABASE=app
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
+DRIVE_DISK=fs
+QUEUE_REDIS_HOST=127.0.0.1
+QUEUE_REDIS_PORT=6379
+QUEUE_REDIS_PASSWORD=
