--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "#database/*": "./database/*.js",
     "#tests/*": "./tests/*.js",
     "#start/*": "./start/*.js",
-    "#config/*": "./config/*.js"
+    "#config/*": "./config/*.js",
+    "#jobs/*": "./app/jobs/*.js"
   },
   "devDependencies": {
     "@adonisjs/assembler": "^7.8.2",
@@ -40,6 +41,7 @@
     "@japa/plugin-adonisjs": "^4.0.0",
     "@japa/runner": "^4.2.0",
     "@swc/core": "1.10.16",
+    "@tanstack/eslint-plugin-query": "^5.73.3",
     "@types/luxon": "^3.6.2",
     "@types/node": "^22.14.1",
     "@types/react": "^19.1.1",
@@ -58,6 +60,7 @@
     "@adonisjs/auth": "^9.3.1",
     "@adonisjs/core": "^6.17.2",
     "@adonisjs/cors": "^2.2.1",
+    "@adonisjs/drive": "^3.4.1",
     "@adonisjs/inertia": "^3.1.0",
     "@adonisjs/lucid": "^21.6.0",
     "@adonisjs/session": "^7.5.1",
@@ -66,20 +69,33 @@
     "@adonisjs/vite": "^4.0.0",
     "@inertiajs/react": "^2.0.8",
     "@radix-ui/react-dialog": "^1.1.7",
+    "@radix-ui/react-label": "^2.1.3",
+    "@radix-ui/react-popover": "^1.1.7",
     "@radix-ui/react-separator": "^1.1.3",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tooltip": "^1.2.0",
+    "@rlanz/bull-queue": "^3.1.0",
     "@tailwindcss/vite": "^4.1.3",
+    "@tanstack/react-query": "^5.74.3",
+    "@tanstack/react-query-devtools": "^5.74.3",
+    "@tanstack/react-table": "^8.21.3",
     "@vinejs/vine": "^3.0.0",
+    "chardet": "^2.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
+    "csv-parser": "^3.2.0",
+    "date-fns": "^4.1.0",
     "edge.js": "^6.2.1",
+    "iconv-lite": "^0.6.3",
     "lucide-react": "^0.487.0",
     "luxon": "^3.6.1",
+    "openai": "^4.94.0",
     "pg": "^8.14.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "recharts": "^2.15.2",
     "reflect-metadata": "^0.2.2",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.3",
