--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "#tests/*": "./tests/*.js",
     "#start/*": "./start/*.js",
     "#config/*": "./config/*.js",
-    "#jobs/*": "./app/jobs/*.js"
+    "#jobs/*": "./app/jobs/*.js",
+    "#domain/*": "./app/domain/*.js",
+    "#entities/*": "./app/domain/invoices/entities/*.js"
   },
   "devDependencies": {
     "@adonisjs/assembler": "^7.8.2",
@@ -44,6 +46,7 @@
     "@tanstack/eslint-plugin-query": "^5.73.3",
     "@types/luxon": "^3.6.2",
     "@types/node": "^22.14.1",
+    "@types/node-canvas-text": "^1.0.3",
     "@types/react": "^19.1.1",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.3.4",
@@ -71,6 +74,7 @@
     "@radix-ui/react-dialog": "^1.1.7",
     "@radix-ui/react-label": "^2.1.3",
     "@radix-ui/react-popover": "^1.1.7",
+    "@radix-ui/react-select": "^2.2.2",
     "@radix-ui/react-separator": "^1.1.3",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tooltip": "^1.2.0",
@@ -91,6 +95,8 @@
     "lucide-react": "^0.487.0",
     "luxon": "^3.6.1",
     "openai": "^4.94.0",
+    "pdf2json": "^3.1.5",
+    "pdfjs-dist": "^5.1.91",
     "pg": "^8.14.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
